3b done. consensus reached.

--- a/ESM204_HW4_jkmiller.Rmd
+++ b/ESM204_HW4_jkmiller.Rmd
@@ -238,6 +238,8 @@ country_loss_cost_c = lossC_cost$value # $2,753.63
 # 3. Tax revenue generated
 # To emit a ton of carbon in country X, you must pay a tax of $t. You will need to find the tax that accomplishes the desired reduction.
 # so is there no tax generated on this? Are we supposed to assume a certain tax amount? or is this 3.b)?
+
+# Tax revenue for this option is $0.
 ```
 
 
@@ -274,16 +276,51 @@ supplyC = function(x){
 }
 
 
-supplyA(taxprice) # 83.33489
-supplyB(taxprice) # 151.4956
-supplyC(taxprice) # 65.16953
+supplyA(taxprice) # 83.33489 tons carbon
+supplyB(taxprice) # 151.4956 tons carbon
+supplyC(taxprice) # 65.16953 tons carbon
 
-# Becky and Tara got these same numbers
+supplyTot = supplyA(taxprice) + supplyB(taxprice) +supplyC(taxprice) # Checked that the sum is 300. It is.
+
+# Becky and Tara got similar numbers
 
 ```
 
 
 ```{r}
+# 3b question:
+# 1. Total cost of meeting target in country X
+
+# reduced carbon emissions for each sector
+# Using marginal cost curves
+# integrate the area under the marginal abatement cost curves for 0 to 100 tons of carbon abatement
+# gives total cost of carbon abatement for 100 tons carbon for each sector
+# sum the the total costs for each sector to get the total cost for country X
+
+lossA_tax_cost = integrate(curve_a, 0, supplyA(taxprice))
+lossB_tax_cost = integrate(curve_b, 0, supplyB(taxprice))
+lossC_tax_cost = integrate(curve_c, 0, supplyC(taxprice))
+country_loss_tax_cost = lossA_tax_cost$value + lossB_tax_cost$value + lossC_tax_cost$value  
+
+# The total cost of meeting carbon targets in country X is $5,879.81.
+
+
+################################
+# 2. Total cost for each sector
+country_loss_tax_cost_a = lossA_tax_cost$value # $1,282.61 Sector A
+country_loss_tax_cost_b = lossB_tax_cost$value # $3692.27 Sector B
+country_loss_tax_cost_c = lossC_tax_cost$value # $904.93 Sector C
+
+
+################################
+# 3. Tax revenue generated
+# To emit a ton of carbon in country X, you must pay a tax of $t. You will need to find the tax that accomplishes the desired reduction.
+
+
+tax_revenue = taxprice*300
+
+# Total tax revenue under this policy is $11,828.00
+
 
 ```
 
