3c has an answer. is it the correct answer? I don't know.

--- a/ESM204_HW4_jkmiller.Rmd
+++ b/ESM204_HW4_jkmiller.Rmd
@@ -345,61 +345,88 @@ sectorCabatement = supplyC(taxprice) # 65.2
 
 # Integrate under the marginal abatement curve to the supply of carbon at the tax price
 lossA_trade = integrate(curve_a, 0, supplyA(taxprice))
+lossA_trade$value # 1282.612
+
 lossB_trade = integrate(curve_b, 0, supplyB(taxprice))
-lossC_trade = integrate(curve_c, 0, supplyA(taxprice))
+lossB_trade$value # 3692.271
 
-# TC_A = A + t*[(180 - 100) - supplyA(taxprice)] 
+lossC_trade = integrate(curve_c, 0, supplyC(taxprice))
+lossC_trade$value # 904.9294
 
-TC_A = lossA_trade$value + taxprice*((A - 100) - supplyA(taxprice))
-TC_A
 
-# 1022.85, so cost is reduced
+# Integrate under the marginal abatement curve to the supply of carbon at the tax price
+lossA_trade_diff = integrate(curve_a, 80, supplyA(taxprice))
+lossA_trade_diff$value # 128.2757
 
-lossA_trade$value
+lossB_trade_diff = integrate(curve_b, 100, supplyB(taxprice))
+lossB_trade_diff$value # 1766.78
+
+lossC_trade_diff = integrate(curve_c, 120, supplyC(taxprice))
+lossC_trade_diff$value # -3340
+
+
+# take the differences
+diff_a = lossA_trade$value - lossA_trade_diff$value
+diff_a
+diff_b = lossB_trade$value - lossB_trade_diff$value
+diff_b
+diff_c = lossC_trade$value - lossC_trade_diff$value
+diff_c
+
+
+
+cost_country = diff_a + diff_b + diff_c
+cost_country
+
+
+
+```
+
+
+**From Madeline**
+###4. Country Y Included in Carbon Market
+```{r}
+agsupply_y = function(Q) {(Q + (sectorA$coefficients[1]/sectorA$coefficients[2]) + (sectorB$coefficients[1]/sectorB$coefficients[2]) + (sectorC$coefficients[1]/sectorC$coefficients[2]) + (sectorD$coefficients[1]/sectorD$coefficients[2])) / ((1/sectorA$coefficients[2]) + (1/sectorB$coefficients[2]) + (1/sectorC$coefficients[2]) + (1/sectorD$coefficients[2]))}
+#80, 100, 120, 300s
+
+taxprice_y = agsupply_y(300)
+taxprice_y
+
+sectorAabatement_y = supplyA(taxprice_y)
+sectorBabatement_y = supplyB(taxprice_y)
+sectorCabatement_y = supplyC(taxprice_y)
+sectorDabatement = supplyD(taxprice_y)
+
+##Sector A 
+lossA_y = integrate(supplyA_p, 0, 66.7)
+lossB_y = integrate(supplyB_p, 0, 103.1)
+lossC_y = integrate(supplyC_p, 0, 52.9)
+lossD_y = integrate(supplyD_p, 0, 77.4)
+sectorAabatement*taxprice_y + lossA_y$value
+
+#lossA_t$value #-(100-sectorAabatement)*taxprice
 
 ## Sector B
-sectorBabatement*taxprice + lossB_trade$value
+sectorBabatement*taxprice_y  + lossB_y$value
+
 ## Sector C
-sectorCabatement*taxprice + lossC_trade$value
+sectorCabatement*taxprice_y  + lossC_y$value
 
-
-
-
-
+## Sector D 
+sectorDabatement*taxprice_y  + lossD_y$value
 
 #Cap and trade costs
-lossA_t$value + (96.7-80)*
-lossB_t$value - (100-48.5)*taxprice
-lossC_t$value + (154.8-120)*taxprice
+lossA_y$value + (80-66.7)*taxprice_y
+lossB_y$value - (103.1 - 100)*taxprice_y
+lossC_y$value + (120-52.9)*taxprice_y
+(-77.4)*taxprice_y
 
-
-
+sectorAabatement_y 
+sectorBabatement_y 
+sectorCabatement_y
+sectorDabatement 
+#
 ```
-
-
-```{r}
-
-
-```
-
-
-
-
-
-
-```{r}
-
-
-
-
-
-
-
-
-
-```
-
-
 
 
 
